# spider-android

./: .gitignore  8613349150214.session  Ad.drawio  README.md  app.py  const.py  events.py  log.json  makefile  pyproject.toml  requirements.txt  spider-android.code-workspace  x.py
android/: spider.py
android/douyin/: douyin.py
android/facebook/: facebook_spider.py
android/letstalk/: letstalk_spider.py  phonecheck.py
android/tg/: regist.py  server.py  tg3.py  tg_spider.py  tgx.py  tgx2.py  tgx2.spec
config/: __init__.py  settings.py
core/: androidspider.py  spider.py
core/db/: events.py  mgdb.py  models.py  schema.py  spiderstate.py
core/db/queries/: tables.py
core/routes/: api.py  letstalk.py  t.py  tg.py
core/spiders/facebook/: facebook_spider.py
core/spiders/kuaishou/: main.py
core/spiders/letstalk/: bypassFulao2.js  chat.py  letstalk_spider.py  test_letstalk_spider.py
core/spiders/tg/: server.py  test.py  tg3.py  tg4.py  tg_regist.py  tg_spider.py  tgx.py  tgx2.py
core/tools/: __init__.py  deco.py  ocr.py
db/: events.py  models.py  pgdb.py
db/queries/sql/: sql.py
l/: rediscli.py  scp.sh
routes/: api.py  letstalk.py  tg.py
tools/: bs.py  helper.py  logger.py  ocr.py
